[gd_scene load_steps=5 format=2]

[ext_resource path="res://_main/_scripts/EntityArea.gd" type="Script" id=1]
[ext_resource path="res://_main/sprites/Slimes/Pot-slime.png" type="Texture" id=2]
[ext_resource path="res://_main/sprites/AREA_ATTACK.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 827.345

[node name="SlimeArea" type="Node2D" groups=["slime"]]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )
damage_area = 10

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 20, 800 )
rotation = -2.36318
shape = SubResource( 1 )

[node name="Skin" type="Sprite" parent="Area2D"]
light_mask = 16
scale = Vector2( 1.5, 1.5 )
z_index = 3
texture = ExtResource( 2 )

[node name="AreaAttack" type="Sprite" parent="Area2D"]
modulate = Color( 0.929412, 0.443137, 0.388235, 0.423529 )
position = Vector2( 30, 850 )
scale = Vector2( 4.48576, 4.48576 )
z_index = 1
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
